@@ -404,18 +404,18 @@ namespace Stetic
 			if (t != null) return t;
 			
 			if (typeName == "Gtk.Action" || typeName == "Gtk.ActionGroup") {
-				t = new ComponentType (this, typeName, "", typeName, "Actions", ComponentType.Unknown.Icon);
+				t = new ComponentType (this, typeName, "", typeName, "Actions", "2.4", ComponentType.Unknown.Icon);
 				types [typeName] = t;
 				return t;
 			}
 			
-			string desc = null, className = null, category = null;
+			string desc = null, className = null, category = null, targetGtkVersion = null;
 			Gdk.Pixbuf px = null;
 			
 			if (externalBackend) {
 				byte[] icon;
 				
-				if (Backend.GetClassDescriptorInfo (typeName, out desc, out className, out category, out icon)) {
+				if (Backend.GetClassDescriptorInfo (typeName, out desc, out className, out category, out targetGtkVersion, out icon)) {
 					if (icon != null)
 						px = new Gdk.Pixbuf (icon);
 				}
@@ -432,11 +432,12 @@ namespace Stetic
 					desc = cls.Label;
 					className = cls.WrappedTypeName;
 					category = cls.Category;
+					targetGtkVersion = cls.TargetGtkVersion;
 					px = cls.Icon;
 				}
 			}
 			
-			t = new ComponentType (this, typeName, desc, className, category, px);
+			t = new ComponentType (this, typeName, desc, className, category, targetGtkVersion, px);
 			types [typeName] = t;
 			return t;
 		}
